
	po/de.po, po-wwsympa/de.po: [Submitted by M. Warkus, univ. Marburg] Updated German translation.

*****	The directory in which all the default configuration files and directories is installed
*****	is now "default", under the root installation directory. In the previous release, it was
*****	share/sympa/default. You should remove this directory now to avoid confusion.

	New configure option: '--enable-fhs'. Sympa supports two kinds of files hierarchies. The historical one, where by default all is gathered in the Sympa directry, and also the FHS recommended hierarchy. Now if the '--enable-fhs' configure option is set, Sympa is installed according to the FHS. Otherwise, it is installed using the historical paths.

 Bug fixes:

	src/sympa_wizard.pl.in: [Reported by P. Maes, univ. Louvain] Net::Netmask CPAN module
	was not checked by the Sympa wizard, though it is required.

	d_install_shared.tt2, mail_tt2/moderate.tt2, mail_tt2/modindex.tt2,
	mail_tt2/user_notification.tt2, mail_tt2/welcome.tt2, po/fr.pomail_tt2/moderate.tt2:
	[Submitted by P. Maes, univ. Louvain] The one time ticket URL was included in the
	internationalization message. It had no sense, as an URL won't be translated, and any
	change in the layout (such as putting the URL in another line) would break the translation
	key. Fixed by putting the URL out of the i18n string.

	src/etc/script/create_db.mysql: [Submitted by D. Ayre, univ. E. Carr, Vancouver]
	A missing comma in create_db.mysql made the creation script fail with an SQL error.

	src/lib/Conf.pm: [Reported by M. Warkus, univ. Marburg] When using the default robot,
	wwsympa.conf parameters were not taken into account, only the default values set
	in confdef.pm. The value could only be set in sympa.conf. This was due to the load_robots
	function which initialized the config with default values and sympa.conf values and then
	looked for customized values for virtual hosts only. Fixed by replacing default values by